# helm

./: .gitignore  .golangci.yml  CHANGELOG.md  CONFORMANCE.md  Dockerfile  HELM_Unified_Canonical_Standard_FINAL_2026-02-15_FINAL_SOTA_v1.2.md  LICENSE  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  go.work  install.sh  sbom.json  sbom.spdx.json
.github/DISCUSSION_TEMPLATE/: start-here.yml
.github/workflows/: helm_core_gates.yml  release.yml  sdk_gates.yml
api/openapi/: helm.openapi.yaml
apps/helm-node/: conform.go  demo.go  export_cmd.go  go.mod  go.sum  main.go  org_synthesize.go  orgdna_cmd.go  runserver_helpers.go  subsystems.go  verify_cmd.go
artifacts/00_baseline/: ARCH_MAP.md  (+2 more)
core/: .gitignore  Dockerfile  Dockerfile.api  go.mod  go.sum
deploy/: Caddyfile  DEMO_HOSTED.md  Dockerfile.caddy
docs/: CONFORMANCE.md  CONSOLE_API.md  DEMO.md  DEPENDENCIES.md  FOR_HUMANS.md  HELM_Unified_Canonical_Standard.md  INTEGRATE_IN_5_MIN.md  OBSERVABILITY.md  ORGDNA_OVERVIEW.md  OSS_CUTLINE.md  OSS_SCOPE.md  POLICY_BACKENDS.md  POLICY_BUNDLES.md  PORTS.md  PROCUREMENT.md  PUBLISHING.md  QUICKSTART.md  RESPONSES_API.md  RFP_ANSWERS.md  ROADMAP.md  SECURITY_MODEL.md  START_HERE.md  TCB_POLICY.md  THREAT_MODEL.md  UNKNOWNs.md  VERIFIER_TRUST_MODEL.md
helm-receipts/: proofgraph.json  receipts-2026-02-17.jsonl
schemas/: orgdna.schema.json
scripts/: deploy_demo.sh  generate-fixture.mjs
sdk/python/: pyproject.toml
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: lib.rs
(+521 files in other folders)
