[project]
name = "helm-sdk"
version = "0.1.0"
description = "Python SDK for HELM — fail-closed tool calling for AI agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSL-1.1" }
authors = [{ name = "Mindburn Labs", email = "oss@mindburn.ai" }]
dependencies = ["httpx>=0.25.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["helm_sdk*"]
