[workspace]
members = ["."]

[package]
name = "helm-sdk"
version = "0.1.1"
edition = "2021"
description = "Rust SDK for HELM — fail-closed tool calling for AI agents"
license = "BUSL-1.1"
repository = "https://github.com/Mindburn-Labs/helm"

[dependencies]
reqwest = { version = "0.12", features = ["json", "multipart", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
